--- a/app/src/main/res/layout/activity_pengukuran.xml
+++ b/app/src/main/res/layout/activity_pengukuran.xml
@@ -68,6 +68,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_tb"
                 android:inputType="numberDecimal"
+                android:cursorVisible="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
@@ -119,6 +120,7 @@
             app:boxStrokeColor="@color/light_blue">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_bb"
+                android:cursorVisible="false"
                 android:inputType="numberDecimal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
